[package]
name = "necrodancer-encounter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
derive_more = { version = "1.0.0", features = ["full"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_urlencoded = "0.7.1"
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
